Initial base functions that create and generate a web of nodes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(Neural_Network)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp)
+set(SOURCE_FILES main.cpp Node.cpp Node.h Green.cpp Green.h)
 add_executable(Neural_Network ${SOURCE_FILES})
