--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,11 @@ project(Neural_Network)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp Node.cpp Node.h Green.cpp Green.h)
+set(SOURCE_FILES
+        Green.cpp
+        Green.h
+        main.cpp
+        Node.cpp
+        Node.h)
+
 add_executable(Neural_Network ${SOURCE_FILES})
