finish base neural network
base neural network needs tweaking but soft-max backprop is what is
used. A convergence backprop will be created later for static input
training

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,10 @@ set(SOURCE_FILES
         Green.h
         main.cpp
         Node.cpp
-        Node.h)
+        Node.h
+        optdigits_train.txt
+        optdigits_names.txt
+        optdigits_test.txt
+        cmake-build-debug/tester.cpp)
 
 add_executable(Neural_Network ${SOURCE_FILES})
