Improved type safety & configuration optimizer file
Renamed neural net object's class from Green -> NeuralNet
Improved type safety and formatting. Use FindBestLearningRate.cpp to run
user specified number of neural nets with custom configurations against
training and test files. Learning alpha slowly increases after each
neural net epoch. Use with each net's performance metrics to find
optimal learning rate and hidden node count for your neural net
configuration.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,14 @@ project(Neural_Network)
 set(CMAKE_CXX_STANDARD 11)
 
 set(SOURCE_FILES
-        Green.cpp
-        Green.h
+        NeuralNet.cpp
+        NeuralNet.h
         main.cpp
         Node.cpp
         Node.h
         optdigits_train.txt
         optdigits_names.txt
         optdigits_test.txt
-        cmake-build-debug/tester.cpp)
+        cmake-build-debug/tester.cpp FindBestLearningRate.cpp)
 
 add_executable(Neural_Network ${SOURCE_FILES})
